--- a/postgresql.mdx
+++ b/postgresql.mdx
@@ -44,14 +44,6 @@ You can then use [SQL file resolvers](/docs/sql-resolvers) to query your databas
 SELECT id, name, email FROM users
 ```
 
-Or use the source directly in Python resolvers:
-
-```py
-@online
-def resolver_fn(...) -> ...:
-    return pg.query(...).first()
-```
-
 ## Multiple Integrations
 
 <span>{getNamedIntegrationText()}</span>
@@ -63,7 +55,7 @@ risk_pg = PostgreSQLSource(name="**RISK_PG**")
 marketing_pg = PostgreSQLSource(name="**MARKETING_PG**")
 ```
 
-Then reference them in [SQL file resolvers](/docs/sql-resolvers) using the `name` parameter:
+Then reference them in [SQL file resolvers](/docs/sql-resolvers) using the `name` parameter. For example, to query from the `RISK_PG` source:
 
 ```sql
 -- type: online
@@ -72,39 +64,13 @@ Then reference them in [SQL file resolvers](/docs/sql-resolvers) using the `name
 SELECT id, credit_score FROM users
 ```
 
-Or in Python resolvers:
+And to query from the `MARKETING_PG` source:
 
-```py
-@online
-def risk_resolver(...) -> ...:
-    return risk_pg.query(...).first()
-
-@online
-def marketing_resolver(...) -> ...:
-    return marketing_pg.query(...).first()
+```sql
+-- type: online
+-- resolves: User
+-- source: MARKETING_PG
+SELECT id, email, campaign_status FROM users
 ```
 
 <span>{getEnvironmentVariableText("RISK_PG", "PGPORT")}</span>
-
-## Environment Variables
-
-You can also configure the integration directly using environment variables
-on your local machine or from those added through the
-[generic environment variable](/docs/env-vars) support.
-
-```py
-import os
-from chalk.sql import PostgreSQLSource
-
-pg = PostgreSQLSource(
-    host=os.getenv("PGHOST"),
-    port=os.getenv("PGPORT"),
-    db=os.getenv("PGDATABASE"),
-    user=os.getenv("PGUSER"),
-    password=os.getenv("PGPASSWORD"),
-)
-
-@online
-def resolver_fn(...) -> ...:
-    return pg.query(...).first()
-```
