--- a/redshift.mdx
+++ b/redshift.mdx
@@ -50,14 +50,6 @@ You can then use [SQL file resolvers](/docs/sql-resolvers) to query your databas
 SELECT id, name, email FROM users
 ```
 
-Or use the source directly in Python resolvers:
-
-```py
-@online
-def fn(...) -> ...:
-    return redshift.query(...).first()
-```
-
 ## Multiple Integrations
 
 <span>{getNamedIntegrationText()}</span>
@@ -69,7 +61,7 @@ risk = RedshiftSource(name="**RISK**")
 marketing = RedshiftSource(name="**MARKETING**")
 ```
 
-Then reference them in [SQL file resolvers](/docs/sql-resolvers) using the `name` parameter:
+Then reference them in [SQL file resolvers](/docs/sql-resolvers) using the `name` parameter. For example, to query from the `RISK` source:
 
 ```sql
 -- type: online
@@ -78,38 +70,13 @@ Then reference them in [SQL file resolvers](/docs/sql-resolvers) using the `name
 SELECT id, credit_score FROM users
 ```
 
-Or in Python resolvers:
+And to query from the `MARKETING` source:
 
-```py
-@online
-def risk_resolver(...) -> ...:
-    return risk.query(...).first()
-
-@online
-def marketing_resolver(...) -> ...:
-    return marketing.query(...).first()
+```sql
+-- type: online
+-- resolves: User
+-- source: MARKETING
+SELECT id, email, campaign_status FROM users
 ```
 
 <span>{getEnvironmentVariableText("RISK", "REDSHIFT_DB")}</span>
-
-## Environment Variables
-
-You can also configure the integration directly using environment variables
-on your local machine or from those added through the
-[generic environment variable](/docs/env-vars) support.
-
-```py
-import os
-from chalk.sql import RedshiftSource
-
-redshift = RedshiftSource(
-    host=os.getenv("REDSHIFT_HOST"),
-    db=os.getenv("REDSHIFT_DB"),
-    user=os.getenv("REDSHIFT_USER"),
-    password=os.getenv("REDSHIFT_PASSWORD"),
-)
-
-@online
-def resolver_fn(...) -> ...:
-    return redshift.query(...).first()
-```
