--- a/snowflake.mdx
+++ b/snowflake.mdx
@@ -46,15 +46,6 @@ You can then use [SQL file resolvers](/docs/sql-resolvers) to query your databas
 SELECT id, name, email FROM users
 ```
 
-Or use the source directly in Python resolvers:
-
-```py
-@online
-def fn(...) -> ...:
-    return snowflake.query(...).first()
-```
-
-
 ## Multiple Integrations
 
 <span>{getNamedIntegrationText()}</span>
@@ -66,7 +57,7 @@ risk = SnowflakeSource(name="**RISK**")
 marketing = SnowflakeSource(name="**MARKETING**")
 ```
 
-Then reference them in [SQL file resolvers](/docs/sql-resolvers) using the `name` parameter:
+Then reference them in [SQL file resolvers](/docs/sql-resolvers) using the `name` parameter. For example, to query from the `RISK` source:
 
 ```sql
 -- type: online
@@ -75,44 +66,16 @@ Then reference them in [SQL file resolvers](/docs/sql-resolvers) using the `name
 SELECT id, credit_score FROM users
 ```
 
-Or in Python resolvers:
+And to query from the `MARKETING` source:
 
-```py
-@online
-def risk_resolver(...) -> ...:
-    return risk.query(...).first()
-
-@online
-def marketing_resolver(...) -> ...:
-    return marketing.query(...).first()
+```sql
+-- type: online
+-- resolves: User
+-- source: MARKETING
+SELECT id, email, campaign_status FROM users
 ```
 
 <span>{getEnvironmentVariableText("RISK", "SNOWSQL_SCHEMA")}</span>
-
-## Environment Variables
-
-You can also configure the integration directly using environment variables
-on your local machine or from those added through the
-[generic environment variable](/docs/env-vars) support.
-
-```py
-import os
-from chalk.sql import SnowflakeSource
-
-snowflake = SnowflakeSource(
-    db=os.getenv("SNOWSQL_DATABASE"),
-    schema=os.getenv("SNOWSQL_SCHEMA"),
-    role=os.getenv("SNOWSQL_ROLE"),
-    warehouse=os.getenv("SNOWSQL_WAREHOUSE"),
-    user=os.getenv("SNOWSQL_USER"),
-    password=os.getenv("SNOWSQL_PWD"),
-    account_identifier=os.getenv("SNOWSQL_ACCOUNT_IDENTIFIER")
-)
-
-@online
-def resolver_fn(...) -> ...:
-    return snowflake.query(...).first()
-```
 
 ## Configuring Your Snowflake Integration
 
