--- a/model_registry.mdx
+++ b/model_registry.mdx
@@ -28,17 +28,7 @@ Generally running inference on models in Chalk involves three steps:
 
 To add a model to the Chalk model registry, you can either register an existing model or run training code to create a new model. Once registered, models can be versioned and tracked over time. Registering models through training jobs is covered in the [Chalk model training docs](/docs/model_training).
 
-### Registering Existing Models
-
-Existing machine learning models can be registered in Chalk using the `ChalkClient` class. You can register models from local files, cloud storage, or directly from Python objects. All of these are supported through the `client.register_model` method.
-
-#### Registering From Local Files
-
-To register a model from local files, provide the path to the model files and any additional files needed for inference, such as tokenizers or configuration files.
-You'll also want to specify the input and output schema for the model, which helps with validation and integration in your Chalk deployment.
-
-When registering a new model, you can specify a description which will be shown for the `Model` object in the Chalk dashboard. To register a new
-model, you should use the `client.register_model_namespace` method. This will create a new model in the registry and add a new model version.
+To add a new model namespace to the registry, you can use the `client.register_model_namespace` method. This namespace can then be used when registering a model version to assign it to this namespace.
 
 ```python
 from chalk.client import ChalkClient
@@ -47,12 +37,34 @@ client = ChalkClient()
 
 client.register_model_namespace(
     name="RiskScoreModel",
+    description="Risk score model developed in xgboost"
+)
+```
+
+### Registering Existing Models
+
+Existing machine learning models can be registered in Chalk using the `ChalkClient` class. You can register models from local files, cloud storage, or directly from Python objects. All of these are supported through the `client.register_model_version` method.
+
+#### Registering From Local Files
+
+To register a model from local files, provide the path to the model files and any additional files needed for inference, such as tokenizers or configuration files.
+You'll also want to specify the input and output schema for the model, which helps with validation and integration in your Chalk deployment.
+
+When registering a new model, you can specify a description which will be shown for the `Model` object in the Chalk dashboard. To register a new
+model, you should use the `client.register_model_version` method. This will create a new model in the registry and add a new model version.
+
+```python
+from chalk.client import ChalkClient
+
+client = ChalkClient()
+
+client.register_model_version(
+    name="RiskScoreModel",
     aliases=["v1.0"],
     model_paths=["./risk_score_model.pth"],
     additional_files=[
         "./tokenizer.json"
     ],
-    description="Model for predicting user risk scores",
     metadata={
         "framework": "pytorch",
         "training_date": "2025-07-29",
@@ -83,7 +95,6 @@ client.register_model_version(
     name="RiskScoreModel",
     aliases=["v1.0.0"],
     model=rfc,  # Directly pass the model object
-    description="Model for predicting user risk scores",
     metadata={
         "framework": "sklearn",
         "training_date": "2025-07-29",
@@ -119,9 +130,9 @@ print(f"Performance: {model_v1.metadata['training_metrics']}")
 To include models in your Chalk deployment, use `ModelReference` objects. `ModelReference`s are code-defined objects which should be included in your Chalk code: they are used to connect model versions to model deployments.
 
 ```python
+from chalk.features import features, _
 from chalk.ml import ModelReference
 from chalk import functions as F
-from chalk.features import features
 
 # Load a model into the deployment
 churn_risk = ModelReference.from_version(
@@ -152,9 +163,9 @@ performance over time.
 Once models are registered and loaded into your deployment, you can run inference on your models:
 
 ```python
+from chalk.features import feature, features, _
 from chalk.ml import ModelReference
 from chalk import functions as F
-from datetime import datetime
 
 # Load a model into the deployment using alias
 risk_model_latest = ModelReference.from_alias(
@@ -175,7 +186,7 @@ class User:
     age: int
     income: float
     risk_score: float = feature(versions={
-        1: feature(description="Version 1.0.0", expression=F.inference(risk_model_v1_0_0, inputs=[_.age, 10, _.income]))
+        1: feature(description="Version 1.0.0", expression=F.inference(risk_model_v1_0_0, inputs=[_.age, 10, _.income])),
         2: feature(description="Latest model version", expression=F.inference(risk_model_latest, inputs=[_.age, 10, _.income])),
     })
 ```
