--- a/model_registry.mdx
+++ b/model_registry.mdx
@@ -37,7 +37,7 @@ client = ChalkClient()
 
 client.register_model_namespace(
     name="RiskScoreModel",
-    description="Risk score model developed in xgboost"
+    description="Risk score model developed in pytorch"
 )
 ```
 
