--- a/postgresql.mdx
+++ b/postgresql.mdx
@@ -23,30 +23,9 @@ PostgreSQL database:
 
 <AddPostgresIntegration onSubmit={(e) => e.preventDefault()} />
 
-## Single Integration
+## Usage
 
-If you have only one PostgreSQL connection that you'd like
-to add to Chalk, you do not need to specify any arguments
-to construct the source in your code.
-
-```py
-from chalk.sql import PostgreSQLSource
-
-pg = PostgreSQLSource()
-```
-
-You can then use [SQL file resolvers](/docs/sql-resolvers) to query your database:
-
-```sql
--- type: online
--- resolves: User
--- source: postgres
-SELECT id, name, email FROM users
-```
-
-## Multiple Integrations
-
-<span>{getNamedIntegrationText()}</span>
+After configuring your PostgreSQL integration in the dashboard, define your data sources in Python:
 
 ```py
 from chalk.sql import PostgreSQLSource
