--- a/mssql.mdx
+++ b/mssql.mdx
@@ -46,7 +46,7 @@ Chalk supports three authentication methods:
 
 **Azure AD Service Principal** - For authentication using an Azure AD application, provide `client_id`, `client_secret`, and `tenant_id`.
 
-## Usage
+## Setup
 
 After configuring your Microsoft SQL Server integration in the dashboard, define your data sources in Python:
 
