--- a/bigquery.mdx
+++ b/bigquery.mdx
@@ -25,15 +25,15 @@ As such, we require `bigquery.tables.create` and `bigquery.jobs.create` permissi
 create and use these temporary tables.
 
 
-## Usage
+## Setup
 
 After configuring your BigQuery integration with the [GCP integration](/docs/gcp), define your data sources in Python:
 
 ```py
 from chalk.sql import BigQuerySource
 
-risk = BigQuerySource(name="**RISK**")
-marketing = BigQuerySource(name="**MARKETING**")
+risk = BigQuerySource(name="RISK")
+marketing = BigQuerySource(name="MARKETING")
 ```
 
 You can then reference them in [SQL file resolvers](/docs/sql-resolvers) using the `name` parameter. For example, to query from the `RISK` source:
