rename itnegrations setup

--- a/bigquery.mdx
+++ b/bigquery.mdx
@@ -25,7 +25,7 @@ As such, we require `bigquery.tables.create` and `bigquery.jobs.create` permissi
 create and use these temporary tables.
 
 
-## Setup
+## Integrations Setup
 
 After configuring your BigQuery integration with the [GCP integration](/docs/gcp), define your data sources in Python:
 
