--- a/databricks.mdx
+++ b/databricks.mdx
@@ -14,7 +14,7 @@ Alternately, you can configure the source through your dashboard.
 
 ---
 
-## Setup
+## Integrations Setup
 
 After configuring your Databricks integration in the dashboard, define your data sources in Python:
 
