--- a/mysql.mdx
+++ b/mysql.mdx
@@ -23,7 +23,7 @@ MySQL database:
 
 <AddMySQLIntegration onSubmit={(e) => e.preventDefault()} />
 
-## Setup
+## Integrations Setup
 
 After configuring your MySQL integration in the dashboard, define your data sources in Python:
 
