--- a/postgresql.mdx
+++ b/postgresql.mdx
@@ -23,7 +23,7 @@ PostgreSQL database:
 
 <AddPostgresIntegration onSubmit={(e) => e.preventDefault()} />
 
-## Setup
+## Integrations Setup
 
 After configuring your PostgreSQL integration in the dashboard, define your data sources in Python:
 
