--- a/redshift.mdx
+++ b/redshift.mdx
@@ -29,7 +29,7 @@ in the S3 bucket provided. The S3 bucket itself does not require versioning, but
 set a retention policy on the bucket. The retention policy should be somewhere from 1 - 14 days,
 to balance storage efficiency with history that can be useful in debugging.
 
-## Setup
+## Integrations Setup
 
 After configuring your Redshift integration in the dashboard, define your data sources in Python:
 
