--- a/snowflake.mdx
+++ b/snowflake.mdx
@@ -25,7 +25,7 @@ defaults set in the data source definition.
 
 ---
 
-## Setup
+## Integrations Setup
 
 After configuring your Snowflake integration in the dashboard, define your data sources in Python:
 
