--- a/spanner.mdx
+++ b/spanner.mdx
@@ -19,47 +19,15 @@ Spanner database:
 
 <AddSpannerIntegration onSubmit={(e) => e.preventDefault()} />
 
+## Integrations Setup
 
-## Single Integration
-
-Add your Spanner data source in a Python file and give it a `name`. This line is required for all Spanner
-integrations. In this file, we'll also define a `User` feature class with a `transaction_volume` feature which will be
-resolved with Spanner.
-
-If you have only one Spanner connection that you'd like
-to add to Chalk, you do not need to specify any arguments
-to construct the source in your code.
-
-```py
-from chalk.features import features
-from chalk.sql import SpannerSource
-
-spanner_source = SpannerSource()
-
-@features
-class User:
-    id: str
-    transaction_volume: float
-```
-
-You can then use [SQL file resolvers](/docs/sql-resolvers) to query your database:
-
-```sql
--- type: online
--- resolves: User
--- source: spanner
-SELECT id, transaction_volume FROM UserTable
-```
-
-## Multiple Integrations
-
-<span>{getNamedIntegrationText()}</span>
+After configuring your Spanner integration in the dashboard, define your data sources in Python:
 
 ```py
 from chalk.sql import SpannerSource
 
-spanner_source_txns = SpannerSource(name="**SPANNER_TRANSACTIONS**")
-spanner_source_marketing = SpannerSource(name="**SPANNER_MARKETING**")
+spanner_source_txns = SpannerSource(name="SPANNER_TRANSACTIONS")
+spanner_source_marketing = SpannerSource(name="SPANNER_MARKETING")
 ```
 
 Then reference them in [SQL file resolvers](/docs/sql-resolvers) using the `name` parameter. For example, to query from the `SPANNER_TRANSACTIONS` source:
